lambda-envoy-integration/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/lambda1" }
                          route: { cluster: lambda_service }
                          typed_per_filter_config:  
                            envoy.filters.http.aws_lambda:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.aws_lambda.v3.PerRouteConfig
                              invoke_config:
                                arn: "arn:aws:lambda:us-east-1:111111111111:function:envoyfunction"
                                payload_passthrough: true
                        - match: { prefix: "/lambda" }
                          route: { cluster: lambda_service }
                          typed_per_filter_config:  
                            envoy.filters.http.aws_lambda:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.aws_lambda.v3.PerRouteConfig
                              invoke_config:
                                arn: "arn:aws:lambda:us-east-1:22222222222222:function:envoyfunction1"
                                payload_passthrough: true
                        - match:
                            prefix: "/"
                          route:
                            cluster: backend_service
                http_filters:
                  - name: envoy.filters.http.aws_lambda
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.aws_lambda.v3.Config
                      arn: "arn:aws:lambda:us-east-1:111111111111:function:envoyfunction"
                      payload_passthrough: true
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: backend_service
      connect_timeout: 50s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: backend_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: nodeapp
                      port_value: 8080
    - name: aws_lambda_cluster
      connect_timeout: 500s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}  # Required for AWS Lambda invocations
      load_assignment:
        cluster_name: aws_lambda_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: lambda.us-east-1.amazonaws.com  # AWS Lambda endpoint
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
    - name: lambda_service
      connect_timeout: 10s
      type: LOGICAL_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      metadata:
        filter_metadata:
          com.amazonaws.lambda:
              egress_gateway: true
      load_assignment:
        cluster_name: lambda_service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: lambda.us-east-1.amazonaws.com
                  port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type":  type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: "*.amazonaws.com"
